# SauceDemoPOM

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  variables.py
config/: config.json
data/: login_data.json
pages/: base_page.py  cart_page.py  inventory_page.py  login_page.py
tests/: test_login_page.py
utils/: config.py  config_loader.py  logger.py  logger_instance.py  utils.py  webdriver_initializer.py
